# emscripten-cmake

./: CMakeLists.txt  README.md
public/: int_sqrt.js  int_sqrt.wasm  sqrt.js
test/: hello_world.cpp
